[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/Effects/light.png" type="Texture" id=1]
[ext_resource path="res://world/temple_objects/wall_light.gd" type="Script" id=2]
[ext_resource path="res://Sprites/World/temple_objects/wall_light_right.png" type="Texture" id=3]
[ext_resource path="res://Sprites/World/temple_objects/wall_light_right_lit.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 64.0312

[node name="wall_light" type="StaticBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="off_state" type="Sprite" parent="."]
position = Vector2( -16, 0 )
texture = ExtResource( 3 )

[node name="lit_state" type="Sprite" parent="."]
position = Vector2( -16, 0 )
texture = ExtResource( 4 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( -2, -4 )
texture = ExtResource( 1 )
texture_scale = 0.4
color = Color( 0.976471, 0.905882, 0.317647, 1 )
energy = 0.9
mode = 2
shadow_enabled = true
shadow_gradient_length = 10.0
shadow_filter = 2
shadow_filter_smooth = 1.0

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
